# ecliphra

./: LICENSE  README.md  pyproject.toml
ecliphra/: __init__.py  experiments.py  models.py  run.py
ecliphra/utils/: curvature_riding.py  energy_system.py  enhanced_fatigue_controller.py  enhanced_fingerprinting.py  photofield.py  prefrontal.py
ecliphra/visuals/: fatigue_visualization.py
